--- a/partials/blocks/content/_content.scss
+++ b/partials/blocks/content/_content.scss
@@ -1,5 +1,5 @@
 section.content {
-	padding: 96px 0 48px 0;
+	padding: 96px 0 96px 0;
 
 	display: flex;
 	flex-direction: column;
@@ -41,6 +41,11 @@ section.content {
 	// containers
 
 	.text-container {
+
+		> * {
+			max-width: 800px;
+			margin-inline: auto;
+		}
 	}
 
 	.image-container {
@@ -68,7 +73,7 @@ section.content {
 	.code-container {
 		width: 100%;
 		height: 100%;
-		
+
 		iframe {
 			width: 100%;
 			min-height: 320px;
@@ -183,6 +188,19 @@ section.content {
 		.button {
 			--bg: var(--cl-primary);
 			--fg: var(--cl-primary-text);
+		}
+	}
+
+	// align
+
+	&.content--center {
+		.text-container {
+			text-align: center;
+		}
+	}
+	&.content--right {
+		.text-container {
+			text-align: right;
 		}
 	}
 }
